feat: Add Spanish translations for class_0 code examples and update cSpell dictionary

--- a/class_0/.vscode/settings.json
+++ b/class_0/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
   "cSpell.words": [
-    "pokemons"
+    "clase",
+    "Crear",
+    "Imprime",
+    "Llamar",
+    "objeto",
+    "partir",
+    "pokemons",
+    "Propiedades"
   ]
 }
