feat: Add Spanish translations for class_0 code examples and update cSpell dictionary

--- a/class_0/.vscode/settings.json
+++ b/class_0/.vscode/settings.json
@@ -1,12 +1,17 @@
 {
   "cSpell.words": [
+    "bajo",
+    "cerro",
     "clase",
     "Crear",
+    "Cybertruck",
     "Imprime",
     "Llamar",
     "objeto",
     "partir",
+    "Pitbull",
     "pokemons",
-    "Propiedades"
+    "Propiedades",
+    "Siames"
   ]
 }
