feat: Add operator assignment example in class_0/00_operators.dart

--- a/class_0/.vscode/settings.json
+++ b/class_0/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "asignado",
     "bajo",
     "cerro",
     "clase",
@@ -8,6 +9,7 @@
     "Imprime",
     "Llamar",
     "objeto",
+    "Operador",
     "partir",
     "Pitbull",
     "pokemons",
