feat: Add new operators and translations for class_0 code examples

--- a/class_0/.vscode/settings.json
+++ b/class_0/.vscode/settings.json
@@ -6,8 +6,10 @@
     "clase",
     "Crear",
     "Cybertruck",
+    "igual",
     "Imprime",
     "Llamar",
+    "Menor",
     "objeto",
     "Operador",
     "partir",
