--- a/class_1/android/app/src/main/AndroidManifest.xml
+++ b/class_1/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="test0"
+        android:label="class_1"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
