--- a/class_1/.vscode/settings.json
+++ b/class_1/.vscode/settings.json
@@ -1,8 +1,15 @@
 {
     "cSpell.words": [
+        "boton",
         "decir",
+        "hace",
         "nada",
         "propiedad",
-        "quiere"
+        "quiere",
+        "sobra",
+        "sonido",
+        "tiene",
+        "vibracions",
+        "vibre"
     ]
 }
