❤️‍🔥 [add] new declaration of instance

--- a/class_1/.vscode/settings.json
+++ b/class_1/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "boton",
         "decir",
+        "declaración",
         "hace",
+        "instancia",
         "nada",
         "propiedad",
         "quiere",
