--- a/widgets_app/pubspec.yaml
+++ b/widgets_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
   go_router: ^14.2.7
 
 dev_dependencies:
