--- a/clean_architecture/pubspec.yaml
+++ b/clean_architecture/pubspec.yaml
@@ -7,14 +7,15 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  go_router: ^14.2.7
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
