--- a/push_notification/pubspec.yaml
+++ b/push_notification/pubspec.yaml
@@ -8,18 +8,20 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  cupertino_icons: ^1.0.8
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.6
+  go_router: ^14.3.0
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
