--- a/push_notification/pubspec.yaml
+++ b/push_notification/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   equatable: ^2.0.5
+  firebase_messaging: ^15.1.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
