--- a/riverpod_class/pubspec.yaml
+++ b/riverpod_class/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  riverpod_generator: ^2.6.2
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
