🐛[bug] sorry gohit of future

--- a/bloc_class/pubspec.yaml
+++ b/bloc_class/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   go_router: ^14.6.0
 
 dev_dependencies:
